added backup file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,5 @@ ipython_config.py
 # Markdown Navigator plugin
 
 # End of https://www.gitignore.io/api/pycharm,intellij,jupyternotebooks
+
+Ex2/backup.txt
