added Ex3/data/mnist_784.csv to gitignore since it is too big to be pushed

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ ipython_config.py
 # End of https://www.gitignore.io/api/pycharm,intellij,jupyternotebooks
 
 Ex2/backup.txt
+Ex3/data/mnist_784.csv
