added latex report

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,36 @@ Ex3/data/input_vector_file.in
 #som-toolbox/
 *.log*
 Ex3/som.prop
+
+# ACM report files
+acmart.cls
+acmart.pdf
+acmguide.pdf
+samples/sample-*.pdf
+*.log
+*.aux
+*.cfg
+*.glo
+*.idx
+*.toc
+*.ilg
+*.ind
+*.out
+*.lof
+*.lot
+*.bbl
+*.blg
+*.gls
+*.cut
+*.hd
+*.dvi
+*.ps
+*.thm
+*.tgz
+*.zip
+*.rpi
+*~
+*.bcf
+*.run.xml
+samples/ACM-Reference-Format.bst
+samples/*.tex
